# vessel_reconstruction

./: .gitignore  LICENSE  README.md  requirements.txt
config/: init.ini
stent_deformation/: CMakeLists.txt  README.txt
vessel_reconstruction/: __main__.py  core.py  mesher.py  reader.py  writer.py
